feat: add disconnect button

--- a/www/index.html
+++ b/www/index.html
@@ -18,6 +18,7 @@
 
             <button class="bright">Bright</button>
             <button class="low">Low</button>
+            <button class="disconnect">Disconnect</button>
 
             <p class="info-text">This is info text</p>
         </div>
