--- a/www/index.html
+++ b/www/index.html
@@ -2,30 +2,59 @@
 <html>
 
 <head>
-    <meta http-equiv="Content-Security-Policy"
+    <!--  NO IDEA WHY THIS IS NOT WORKING!!
+        <meta http-equiv="Content-Security-Policy"
         content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; img-src 'self' data: content:;">
+    -->
     <meta name="format-detection" content="telephone=no">
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="viewport" content="initial-scale=1, width=device-width, viewport-fit=cover">
+
+    <link rel="stylesheet" href="css/onsenui.min.css">
+    <link rel="stylesheet" href="css/onsen-css-components.min.css">
+    <script src="js/onsenui.min.js"></script>
+
     <link rel="stylesheet" type="text/css" href="css/index.css">
     <title>Light source</title>
 </head>
 
 <body>
-    <div class="app">
-        <h1>Light!</h1>
-        <div id="deviceready">
-            <p class="event listening">Connecting to Device</p>
-            <p class="event received">Device is Ready</p>
-        </div>
+    <ons-page class="app">
+        <ons-toolbar>
+            <div class="center">Tab 1</div>
+        </ons-toolbar>
 
-        <button class="bright">Bright</button>
-        <button class="low">Low</button>
+        <ons-tabbar swipeable position="auto">
+            <ons-tab page="light.html" label="Light" icon="md-home" active>
+            </ons-tab>
+            <ons-tab page="mood.html" label="Mood" icon="md-settings" active-icon="md-face">
+            </ons-tab>
+        </ons-tabbar>
+    </ons-page>
 
-        <p class="info-text">This is info text</p>
-    </div>
-    <script type="text/javascript" src="cordova.js"></script>
-    <script type="text/javascript" src="js/index.js"></script>
+    <template id="light.html">
+        <ons-page id="light" class="center">
+            <h1 style="text-align: center;">Light!</h1>
+            <ons-button onclick="showAlert()">Click Me</ons-button>
+            <!-- <div id="deviceready">
+                <p class="event listening">Connecting to Device</p>
+                <p class="event received">Device is Ready</p>
+            </div>
+
+            <button class="bright">Bright</button>
+            <button class="low">Low</button>
+
+            <p class="info-text">This is info text</p> -->
+        </ons-page>
+    </template>
+
+    <template id="mood.html">
+        <ons-page id="mood">
+            <h1 style="text-align: center;">Mood!</h1>
+        </ons-page>
+    </template>
+
 </body>
+<script type="text/javascript" src="js/index.js"></script>
 
 </html>
