--- a/www/index.html
+++ b/www/index.html
@@ -2,18 +2,13 @@
 <html>
 
 <head>
-    <!--  NO IDEA WHY THIS IS NOT WORKING!!
-        <meta http-equiv="Content-Security-Policy"
-        content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; img-src 'self' data: content:;">
-    -->
+    <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'">
     <meta name="format-detection" content="telephone=no">
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="viewport" content="initial-scale=1, width=device-width, viewport-fit=cover">
 
     <link rel="stylesheet" href="css/onsenui.min.css">
     <link rel="stylesheet" href="css/onsen-css-components.min.css">
-    <script src="js/onsenui.min.js"></script>
-
     <link rel="stylesheet" type="text/css" href="css/index.css">
     <title>Light source</title>
 </head>
@@ -35,16 +30,12 @@
     <template id="light.html">
         <ons-page id="light" class="center">
             <h1 style="text-align: center;">Light!</h1>
-            <ons-button onclick="showAlert()">Click Me</ons-button>
-            <!-- <div id="deviceready">
-                <p class="event listening">Connecting to Device</p>
-                <p class="event received">Device is Ready</p>
-            </div>
+            <ons-button onclick="app.showAlert()">Click Me</ons-button>
 
-            <button class="bright">Bright</button>
-            <button class="low">Low</button>
+            <button class="bright" onclick="app.bright()">Bright</button>
+            <button class="low" onclick="app.low()">Low</button>
 
-            <p class="info-text">This is info text</p> -->
+            <p class="info-text">This is info text</p>
         </ons-page>
     </template>
 
@@ -53,8 +44,14 @@
             <h1 style="text-align: center;">Mood!</h1>
         </ons-page>
     </template>
+    <script type="text/javascript" src="js/onsenui.min.js"></script>
+    <script type="text/javascript" src="cordova.js"></script>
+    <script type="text/javascript" src="js/index.js"></script>
+    <script>
+        ons.ready(function() {
+            return app.onDeviceReady();
+          });
 
+    </script>
 </body>
-<script type="text/javascript" src="js/index.js"></script>
-
 </html>
