--- a/www/index.html
+++ b/www/index.html
@@ -2,7 +2,8 @@
 <html>
 
 <head>
-    <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'">
+    <meta http-equiv="Content-Security-Policy"
+        content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'">
     <meta name="format-detection" content="telephone=no">
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="viewport" content="initial-scale=1, width=device-width, viewport-fit=cover">
@@ -19,7 +20,7 @@
             <div class="center">Tab 1</div>
         </ons-toolbar>
 
-        <ons-tabbar swipeable position="auto">
+        <ons-tabbar swipeable position="bottom">
             <ons-tab page="light.html" label="Light" icon="md-home" active>
             </ons-tab>
             <ons-tab page="mood.html" label="Mood" icon="md-settings" active-icon="md-face">
@@ -48,10 +49,11 @@
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
     <script>
-        ons.ready(function() {
+        ons.ready(function () {
             return app.onDeviceReady();
-          });
+        });
 
     </script>
 </body>
+
 </html>
