feat: separate blutooth as own file 🔨

--- a/www/index.html
+++ b/www/index.html
@@ -28,6 +28,7 @@
     <script type="text/javascript" src="js/onsenui.min.js"></script>
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
+    <script type="text/javascript" src="js/bluetooth.js"></script>
     <script>
         ons.ready(function () {
             return app.onDeviceReady();
