--- a/www/light.html
+++ b/www/light.html
@@ -4,7 +4,11 @@
 
   <button class="bright" onclick="app.bright()">Bright</button>
   <button class="low" onclick="app.low()">Low</button>
-  <button class="disconnect">Disconnect</button>
+  <button class="disconnect" onclick="app.disconnect()">Disconnect</button>
+  <button class="reconnect" onclick="app.reconnect()">ReConnect</button>
 
-  <p class="info-text">This is info text</p>
+  <p class="info-text">info</p>
+  <p class="status-text">status</p>
+  <p class="error-text">error</p>
+
 </ons-page>
