Add background to logins 🖍

--- a/www/login-2.html
+++ b/www/login-2.html
@@ -1,3 +1,8 @@
 <ons-page id="login-2">
-  <h1 style="text-align: center;">Step two - Login!</h1>
+  <p>
+    <b>Hi, what should <br> call you?</b>
+  </p>
+  <p>
+    <ons-input id="name" modifier="underbar" type="text" max="50"></ons-input>
+  </p>
 </ons-page>
