add backgrounds and light

--- a/www/light.html
+++ b/www/light.html
@@ -1,4 +1,4 @@
-<ons-page id="light" class="center">
+<ons-page id="light" class="center light-background">
   <h1 style="text-align: center;">Light!</h1>
   <ons-button onclick="app.showAlert()">Click Me</ons-button>
 
@@ -7,8 +7,10 @@
   <button class="disconnect" onclick="app.disconnect()">Disconnect</button>
   <button class="reconnect" onclick="app.reconnect()">ReConnect</button>
 
-  <p class="info-text">info</p>
-  <p class="status-text">status</p>
-  <p class="error-text">error</p>
 
+  <script>
+    ons.getScriptPage().onShow = function() {
+      bluetooth.write('S1022552048');
+    };
+  </script>
 </ons-page>
