--- a/www/home.html
+++ b/www/home.html
@@ -1,3 +1,9 @@
-<ons-page id="home">
-  <h1 style="text-align: center;">Home!</h1>
+<ons-page id="home" class="home-background">
+  <img src="./img/light.png" alt="Light" class="home-image"/>
+  <p>Hello there</p>
+  <script>
+    ons.getScriptPage().onShow = function() {
+      bluetooth.write('S2551531028');
+    };
+  </script>
 </ons-page>
