Implement login 3 page

--- a/www/login-3.html
+++ b/www/login-3.html
@@ -1,2 +1,15 @@
 <ons-page id="login-3">
+  <div class="space"></div>
+  <p>
+    <b>Your daily <br> schedule</b>
+  </p>
+  <br> <br>
+  <p>
+    <span>wake up</span>
+    <ons-input id="time" modifier="underbar" type="time"></ons-input>
+  </p>
+  <p>
+    <span>sleep &nbsp;&nbsp;&nbsp;</span>
+    <ons-input id="time" modifier="underbar" type="time"></ons-input>
+  </p>
 </ons-page>
