--- a/www/login.html
+++ b/www/login.html
@@ -1,12 +1,12 @@
 <ons-page id="login">
   <ons-tabbar swipeable hide-tabs>
-    <ons-tab page="login-1.html" label="Login-1" icon="md-home" active>
+    <ons-tab page="login-1.html" label="Login-1" active>
     </ons-tab>
-    <ons-tab page="login-2.html" label="Login-2" icon="md-home">
+    <ons-tab page="login-2.html" label="Login-2">
     </ons-tab>
-    <ons-tab page="login-3.html" label="Login-3" icon="md-home">
+    <ons-tab page="login-3.html" label="Login-3">
     </ons-tab>
-    <ons-tab page="login-4.html" label="Login-4" icon="md-home">
+    <ons-tab page="login-4.html" label="Login-4">
     </ons-tab>
   </ons-tabbar>
 </ons-page>
