Add light image to login 2 page! ✨

--- a/www/login-2.html
+++ b/www/login-2.html
@@ -1,4 +1,5 @@
 <ons-page id="login-2">
+  <img src="./img/light.png" alt="Light" class="light-image" />
   <p>
     <b>Hi, what should <br> call you?</b>
   </p>
