--- a/www/home.html
+++ b/www/home.html
@@ -1,9 +1,12 @@
 <ons-page id="home" class="home-background">
   <img src="./img/light.png" alt="Light" class="home-image"/>
-  <p>Hello there</p>
+  <p id="hello-message">Hello there</p>
   <script>
     ons.getScriptPage().onShow = function() {
       bluetooth.write('S2551531028');
+      var helloP = document.querySelector("#hello-message");
+      helloP.innerHTML = 'Hello there, ' + currentState.name;
+
     };
   </script>
 </ons-page>
