Build moods page

--- a/www/login-4.html
+++ b/www/login-4.html
@@ -1,2 +1,7 @@
 <ons-page id="login-4">
+  <img id="mood-image" src="./img/mood/2.png" alt="Light" class="light-image" />
+  <p>
+    <b>How are you <br> feeling?</b>
+  </p>
+  <ons-range class="range-component" value="50" oninput="app.updateMoodRange(this.value)"></ons-range>
 </ons-page>
