--- a/www/index.html
+++ b/www/index.html
@@ -27,6 +27,7 @@
         </ons-tabbar>
     </ons-page>
 
+    <script type="text/javascript" src="js/quotes.js"></script>
     <script type="text/javascript" src="js/onsenui.min.js"></script>
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
