--- a/www/login-2.html
+++ b/www/login-2.html
@@ -4,6 +4,14 @@
     <b>Hi, what should <br> call you?</b>
   </p>
   <p>
-    <ons-input id="name" modifier="underbar" type="text" max="50"></ons-input>
+    <ons-input id="name" modifier="underbar" type="text" max="50" onchange="updateName(this.value)"></ons-input>
   </p>
+
+
+  <script>
+        var updateName = function (val) {
+          currentState.name = val;
+        };
+
+    </script>
 </ons-page>
