Change icons on menu

--- a/www/app.html
+++ b/www/app.html
@@ -1,10 +1,10 @@
 <ons-page id="app">
   <ons-tabbar swipeable position="bottom">
-    <ons-tab page="home.html" label="Home" icon="md-home" active>
+    <ons-tab page="home.html" icon="md-home" active>
     </ons-tab>
-    <ons-tab page="light.html" label="Light" icon="md-star-outline">
+    <ons-tab page="light.html" icon="md-star-outline">
     </ons-tab>
-    <ons-tab page="mood.html" label="Mood" icon="md-face">
+    <ons-tab page="mood.html" icon="md-mood">
     </ons-tab>
   </ons-tabbar>
 </ons-page>
