--- a/www/light.html
+++ b/www/light.html
@@ -1,4 +1,5 @@
 <ons-page id="light" class="center light-background">
+  <!--
   <h1 style="text-align: center;">Light!</h1>
   <ons-button onclick="app.showAlert()">Click Me</ons-button>
 
@@ -6,10 +7,22 @@
   <button class="low" onclick="app.low()">Low</button>
   <button class="disconnect" onclick="app.disconnect()">Disconnect</button>
   <button class="reconnect" onclick="app.reconnect()">ReConnect</button>
-
+  -->
+  <div class="light-card">
+    <h2>morning schedule</h2>
+    <p>adjust your wake-up time</p>
+  </div>
+  <div class="light-card">
+    <h2>light therapy</h2>
+    <p>spend a moment with the light</p>
+  </div>
+  <div class="light-card">
+    <h2>evening moods</h2>
+    <p>enjoy an augumented sunset</p>
+  </div>
 
   <script>
-    ons.getScriptPage().onShow = function() {
+    ons.getScriptPage().onShow = function () {
       bluetooth.write('S2552551558');
     };
   </script>
