--- a/www/home.html
+++ b/www/home.html
@@ -1,16 +1,63 @@
 <ons-page id="home" class="home-background">
 
-  <p id="hello-message"></p>
-  <p id="hello-message-tag">How are you feeling today?</p>
+  <div id="home-content">
+      <p id="hello-message"></p>
+      <p id="hello-message-tag">How are you feeling today?</p>
 
-  <p id="quote"></p>
+      <p id="quote"></p>
 
+      <div id="home-schedule" class="schedule">
+        <div class="title">
+          Schedule
+        </div>
+        <ul>
+          <li id="wakeuptime">
+            7.30 AM - Wake up
+          </li>
+          <li>
+            8.30 - Light therapy
+          </li>
+          <li>
+            16 - Meditation Session
+          </li>
+          <li id="sleeptime">
+              22 - Sleep
+          </li>
+        </ul>
+      </div>
+
+  </div>
+
+  <div class="lightToggle" onclick="toggleLight()"></div>
 
 
   <script>
 
     function getRndInteger(min, max) {
       return Math.floor(Math.random() * (max - min) ) + min;
+    }
+
+    var toggleLight = function () {
+      if (currentState.on) {
+        bluetooth.write('S0000000008');
+        currentState.on = false;
+        setNightMode();
+      } else {
+        bluetooth.write('S2551531028');
+        currentState.on = true;
+        setLightMode();
+
+      }
+    };
+
+    var setNightMode = function () {
+      var bodyP = document.getElementById("home");
+      bodyP.style.backgroundImage = "url('../img/home_light_off.png') !important;";
+    }
+
+    var setLightMode = function () {
+      var bodyP = document.querySelector(".home-background .page__background");
+      bodyP.style.backgroundImage = "none";
     }
 
     ons.getScriptPage().onShow = function() {
@@ -21,6 +68,12 @@
 
       var quoteP = document.querySelector("#quote");
       quoteP.textContent = quotesList[getRndInteger(0, quotesList.length)];
+
+      var wakeUp = document.querySelector("#wakeuptime");
+      wakeUp.textContent = currentState.wakeUpTime + ' - Wake up';
+
+      var sleep = document.querySelector("#sleeptime");
+      sleep.textContent = currentState.sleepTime + ' - Sleep';
 
     };
   </script>
