--- a/www/index.html
+++ b/www/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/onsenui.min.css">
     <link rel="stylesheet" href="css/onsen-css-components.min.css">
     <link rel="stylesheet" type="text/css" href="css/index.css">
+    <link rel="stylesheet" type="text/css" href="css/mood.css">
     <link rel="stylesheet" type="text/css" href="css/login.css">
     <title>Light source</title>
 </head>
