Add back buttons as icon

--- a/www/light.html
+++ b/www/light.html
@@ -15,17 +15,17 @@
   </div>
   <div id="light-morning" style="display:none;">
     <div class="light-back-button" onclick="lightsBackButton()">
-      <ons-icon icon="md-back"></ons-icon>
+      <ons-icon style="color: white; margin: 20px 0 0 20px" size="26px" icon="md-arrow-back"></ons-icon>
     </div>
   </div>
   <div id="light-therapy" style="display:none;">
     <div class="light-back-button" onclick="lightsBackButton()">
-      <ons-icon icon="md-back"></ons-icon>
+      <ons-icon style="color: white; margin: 20px 0 0 20px" size="26px" icon="md-arrow-back"></ons-icon>
     </div>
   </div>
   <div id="light-evening" style="display:none;">
     <div class="light-back-button" onclick="lightsBackButton()">
-      <ons-icon icon="md-back"></ons-icon>
+      <ons-icon style="color: white; margin: 20px 0 0 20px" size="26px" icon="md-arrow-back"></ons-icon>
     </div>
     <div id="savanna-button" onclick="turnOnSavannah()"></div>
     <div id="sunset-button" onclick="turnOnSunset()"></div>
