--- a/www/mood.html
+++ b/www/mood.html
@@ -15,17 +15,17 @@
   </div>
   <div id="mood-tracker" style="display:none;">
     <div class="mood-back-button" onclick="moodsBackButton()">
-      <ons-icon icon="md-back"></ons-icon>
+      <ons-icon style="color: white; margin: 20px 0 0 20px" size="26px" icon="md-arrow-back"></ons-icon>
     </div>
   </div>
   <div id="mood-activities" style="display:none;">
     <div class="mood-back-button" onclick="moodsBackButton()">
-      <ons-icon icon="md-back"></ons-icon>
+      <ons-icon style="color: white; margin: 20px 0 0 20px" size="26px" icon="md-arrow-back"></ons-icon>
     </div>
   </div>
   <div id="mood-strategies" style="display:none;">
     <div class="mood-back-button" onclick="moodsBackButton()">
-      <ons-icon icon="md-back"></ons-icon>
+      <ons-icon style="color: white; margin: 20px 0 0 20px" size="26px" icon="md-arrow-back"></ons-icon>
     </div>
   </div>
 
