--- a/www/mood.html
+++ b/www/mood.html
@@ -27,6 +27,11 @@
     <div class="mood-back-button" onclick="moodsBackButton()">
       <ons-icon style="color: white; margin: 20px 0 0 20px" size="26px" icon="md-arrow-back"></ons-icon>
     </div>
+    <div class="strategies-content">
+      <div>Meditation</div>
+      <div>Breathing</div>
+      <div>Get grounded</div>
+    </div>
   </div>
 
   <script>
