add winter activities

--- a/www/home.html
+++ b/www/home.html
@@ -14,7 +14,7 @@
           <li id="wakeuptime">
             7.30 AM - Wake up
           </li>
-          <li id="light-therapy">
+          <li id="light-therapy-schedule">
             8.30 - Light therapy
           </li>
           <li>
