--- a/www/mood.html
+++ b/www/mood.html
@@ -22,6 +22,17 @@
     <div class="mood-back-button" onclick="moodsBackButton()">
       <ons-icon style="color: white; margin: 20px 0 0 20px" size="26px" icon="md-arrow-back"></ons-icon>
     </div>
+    <div id="winter-activities-content">
+      <div>Ice skating</div>
+      <div>Going for a walk</div>
+      <div>Swimming</div>
+      <div>Skiing</div>
+      <div>Snow-shoe walking</div>
+      <div>Yoga</div>
+      <div>Sauna</div>
+      <div>Aurora hunting</div>
+      <div>Ice-fishing</div>
+    </div>
   </div>
   <div id="mood-strategies" style="display:none;">
     <div class="mood-back-button" onclick="moodsBackButton()">
