--- a/www/mood.html
+++ b/www/mood.html
@@ -17,6 +17,11 @@
     <div class="mood-back-button" onclick="moodsBackButton()">
       <ons-icon style="color: white; margin: 20px 0 0 20px" size="26px" icon="md-arrow-back"></ons-icon>
     </div>
+    <div class="tracker-content">
+      <div>track mood</div>
+      <div>calendar</div>
+      <div>take the test</div>
+    </div>
   </div>
   <div id="mood-activities" style="display:none;">
     <div class="mood-back-button" onclick="moodsBackButton()">
